<resources>
    <string name="app_name">Skill Search</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <string name="facebook_app_id">116197645489707</string>
    <string name="fb_login_protocol_scheme">fb116197645489707</string>

    //Login
    <string name="login_title">Share your skills and find skilled people in your area</string>

    //Select Skill
    <string name="select_category">Search for your skill or browse through the categories below</string>
    <string name="select_skill">Enter your skill or choose from one below</string>
    <string name="recommend_skill">Recommend a skill to be added?</string>
    <string name="recommend_to_category">Recommend a skill be added to</string>
    <string name="skip_skill_selection">Skip skill selection</string>
    <string name="skill">Skill</string>
    <string name="next">Next</string>
    <string name="type_skill">Type in your skill</string>

    //Skill Role
    <string name="choose_role">Choose your preferred role</string>
    <string name="learner">Learner</string>
    <string name="helper">Helper</string>
    <string name="teacher">Teacher</string>
    <string name="business">Business</string>
    <string name="click_role">Click on a role to learn more</string>
    <string name="learner_description">For people who are either interested in this skill and want to learn more, currently studying and want to gain experience, or eager to work and earn money</string>
    <string name="helper_description">This is the default role, ideal for those who are working but want to start growing their own business, or just happy to help others</string>
    <string name="teacher_description">Competent and experienced in your skill and willing to pass on your knowledge to others</string>
    <string name="business_description">You work or own a business in this skill and intend to use Skill Search to find customers. Requires commercial version</string>

    //Background and Set Location
    <string name="background">Background</string>
    <string name="enter_background">Describe your background in this skill</string>
    <string name="background_hint">Mention any work experience, fully or partially completed qualifications, or projects you\'ve worked on</string>
    <string name="set_location">Tap to place a marker for others to see</string>
    <string name="done">Done</string>

    //Main Activity
    <string name="view_profile">View Profile</string>
    <string name="send_message">Send Message</string>
    <string name="search_skill">Search for a skill</string>
    <string name="no">No user with </string>
    <string name="nearby"> skill nearby</string>
    <string name="no_users_nearby">No users nearby with this skill</string>
    <string name="cancel">Cancel</string>
    <string name="exit_app">Exit Skill Search?</string>
    <string name="exit">Exit</string>
    <string name="search_title">Search for skills</string>
    <string name="search_hint">Search</string>
    <string name="setup_skill">Add your skill</string>

    //Nav Drawer
    <string name="nav_view_profile">View Profile</string>
    <string name="change_skill">Change Main Skill</string>
    <string name="change_details">Edit Description</string>
    <string name="change_location">Change Location</string>
    <string name="add_skill">Add Extra Skill</string>
    <string name="remove_skill">Remove Extra Skill</string>
    <string name="log_out">Log Out</string>
    <string name="other_skill_count">Please remove skills before adding more</string>

    //Contacts and User Message
    <string name="send">Send</string>
    <string name="write_your_message">Write your message</string>
    <string name="search_contacts">Search name or skill</string>

    //User Profile
    <string name="other_skills">Other Skills</string>
    <string name="recommend_user">Recommend this user?</string>
    <string name="recommend">Recommend</string>
    <string name="to_other_users">to other users?</string>
    <string name="recommendations">Recommendations </string>
    <string name="confirm">Confirm</string>
    <string name="write_recommendation">Write a recommendation or just click confirm</string>
    <string name="recommendation">Recommendation</string>

    //Skills
    <string name="mechanic">Mechanic</string>
    <string name="diy">DIY</string>
    <string name="beauty">Beauty</string>
    <string name="childcare">Childcare</string>
    <string name="infotech">IT</string>
    <string name="artist">Artist</string>
    <string name="culinary">Culinary</string>
    <string name="tutor">Tutor</string>
    <string name="professional">Professional</string>
    <string name="transport">Transport</string>
    <string name="hospitality">Hospitality</string>
    <string name="general">Other</string>

    <string name="title_activity_user_profile">UserProfile</string>
    <string name="title_activity_message_user">MessageUser</string>

    //Unused
    <string name="enter_description">Tell us about your experience and availability</string>
    <string name="experience">Experience</string>
    <string name="experience_hint">Describe your background, work experience, fully or partially completed qualifications, or any projects you\'ve worked on\n</string>
    <string name="availability">Availability</string>
    <string name="availability_hint">Are you inexperienced but eager to help and learn for free, or are you mostly working or retired\n</string>
    <string name="professional_advice">Professional Advice</string>
</resources>
