<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/change_skill"
            android:title="@string/change_skill" />
        <item
            android:id="@+id/change_details"
            android:title="@string/change_details" />
        <item
            android:id="@+id/change_location"
            android:title="@string/change_location" />
        <item
            android:id="@+id/add_skill"
            android:title="@string/add_skill" />

        <item
            android:id="@+id/remove_skill"
            android:title="@string/remove_skill" />

        <item
            android:id="@+id/log_out"
            android:title="@string/log_out" />
    </group>

    <!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
    -->

</menu>
