<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/skillRole"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_role"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/half_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_horizontal_margin">
            <TableRow>
                <LinearLayout
                    android:layout_margin="@dimen/half_margin"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center">
                    <TextView
                        android:id="@+id/helper_button"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:background="@drawable/box_helper"
                        android:layout_margin="@dimen/half_margin"
                        android:padding="@dimen/half_margin"
                        android:text="@string/helper"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:onClick="helperClick"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_margin="@dimen/half_margin"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical">
                    <TextView
                        android:id="@+id/business_button"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:background="@drawable/box_business"
                        android:layout_margin="@dimen/half_margin"
                        android:padding="@dimen/half_margin"
                        android:text="@string/business"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:onClick="businessClick"/>
                </LinearLayout>
            </TableRow>

            <TableRow>
                <LinearLayout
                    android:layout_margin="@dimen/half_margin"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical">
                    <TextView
                        android:id="@+id/learner_button"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:background="@drawable/box_learner"
                        android:layout_margin="@dimen/half_margin"
                        android:padding="@dimen/half_margin"
                        android:text="@string/learner"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:onClick="learnerClick"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_margin="@dimen/half_margin"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical">
                    <TextView
                        android:id="@+id/teacher_button"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:background="@drawable/box_teacher"
                        android:layout_margin="@dimen/half_margin"
                        android:padding="@dimen/half_margin"
                        android:text="@string/teacher"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:onClick="teacherClick"/>
                </LinearLayout>
            </TableRow>
        </TableLayout>

        <TextView
            android:text="@string/click_role"
            android:id="@+id/role_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/half_margin"
            android:textSize="16sp"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/role_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="@dimen/half_margin"
            android:text="@string/next"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@drawable/box_grey"
            android:layout_gravity="center"
            android:onClick="toBackground"
            android:clickable="false"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <View
                android:layout_width="@dimen/half_margin"
                android:layout_height="@dimen/half_margin"
                android:background="@drawable/circle_grey"
                android:layout_margin="@dimen/quarter_margin"/>
            <View
                android:layout_width="@dimen/half_margin"
                android:layout_height="@dimen/half_margin"
                android:background="@drawable/circle_accent"
                android:layout_margin="@dimen/quarter_margin"/>
            <View
                android:layout_width="@dimen/half_margin"
                android:layout_height="@dimen/half_margin"
                android:background="@drawable/circle_grey"
                android:layout_margin="@dimen/quarter_margin"/>
            <View
                android:layout_width="@dimen/half_margin"
                android:layout_height="@dimen/half_margin"
                android:background="@drawable/circle_grey"
                android:layout_margin="@dimen/quarter_margin"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>