<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_category"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textAlignment="center"/>

        <AutoCompleteTextView
            android:id="@+id/select_skill_search"
            android:hint="@string/type_skill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@drawable/black_frame"
            android:padding="@dimen/half_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/double_margin"
            android:layout_marginStart="@dimen/double_margin"
            android:layout_marginEnd="@dimen/double_margin"
            android:textAlignment="center"
            android:inputType="textCapSentences"/>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/skill_list_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/double_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:background="@drawable/box_light">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:id="@+id/skill_icon" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/skill_category"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <GridView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/skill_list"
                android:numColumns="2" />
        </LinearLayout>

        <TableLayout
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/tableLayout">

            <TableRow
                android:paddingBottom="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@drawable/box_light"
                    android:onClick="openMechanic">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/half_margin"
                        android:text="@string/mechanic"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="12sp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:src="@drawable/mechanic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@drawable/box_light"
                    android:onClick="openBeauty">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/half_margin"
                        android:text="@string/beauty"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="12sp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:src="@drawable/beauty" />
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@drawable/box_light"
                    android:onClick="openDIY">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/half_margin"
                        android:text="@string/diy"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="12sp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:src="@drawable/diy" />
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:background="@drawable/box_light"
                    android:onClick="openChildcare">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/half_margin"
                        android:text="@string/childcare"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="12sp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:src="@drawable/childcare" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:paddingBottom="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@drawable/box_light"
                    android:onClick="openArtist">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/half_margin"
                        android:text="@string/artist"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="12sp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:src="@drawable/artist" />
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@drawable/box_light"
                    android:onClick="openInfotech">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/half_margin"
                        android:text="@string/infotech"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="12sp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:src="@drawable/infotech" />
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@drawable/box_light"
                    android:onClick="openTutor">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/half_margin"
                        android:text="@string/tutor"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="12sp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:src="@drawable/tutor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:background="@drawable/box_light"
                    android:onClick="openCulinary">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/half_margin"
                        android:text="@string/culinary"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="12sp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:src="@drawable/culinary" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:paddingBottom="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@drawable/box_light"
                    android:onClick="openProfessionalAdvice">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/half_margin"
                        android:text="@string/professional"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="12sp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:src="@drawable/professional_advice" />
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@drawable/box_light"
                    android:onClick="openTransport">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/half_margin"
                        android:text="@string/transport"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="12sp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:src="@drawable/transport" />
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@drawable/box_light"
                    android:onClick="openHospitality">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/half_margin"
                        android:text="@string/hospitality"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="12sp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:src="@drawable/hospitality" />
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:background="@drawable/box_light"
                    android:onClick="openGeneral">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/half_margin"
                        android:text="@string/general"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="12sp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:src="@drawable/general" />
                </LinearLayout>

            </TableRow>
        </TableLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/skip_skill_select"
        android:text="@string/skip_skill_selection"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/recommend_skill"
            android:visibility="gone"
            android:textColor="@color/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:id="@+id/category_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <View
                android:layout_width="@dimen/half_margin"
                android:layout_height="@dimen/half_margin"
                android:background="@drawable/circle_accent"
                android:layout_margin="@dimen/quarter_margin"/>
            <View
                android:layout_width="@dimen/half_margin"
                android:layout_height="@dimen/half_margin"
                android:background="@drawable/circle_grey"
                android:layout_margin="@dimen/quarter_margin"/>
            <View
                android:layout_width="@dimen/half_margin"
                android:layout_height="@dimen/half_margin"
                android:background="@drawable/circle_grey"
                android:layout_margin="@dimen/quarter_margin"/>
            <View
                android:layout_width="@dimen/half_margin"
                android:layout_height="@dimen/half_margin"
                android:background="@drawable/circle_grey"
                android:layout_margin="@dimen/quarter_margin"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>